<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/teal_primary"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/no_connection_image_view"
        android:layout_centerInParent="true"
        android:src="@drawable/no_connection_cloud"
        android:layout_width="80dp"
        android:contentDescription="@string/app_name"
        android:layout_height="48dp" />

    <TextView
        android:layout_marginBottom="16dp"
        android:id="@+id/no_connection_text_view_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/no_connection_image_view"
        android:gravity="center"
        android:textColor="#FFF"
        android:fontFamily="sans-serif-condensed"
        android:textSize="25sp"
        android:text="@string/no_connection_one" />

    <TextView
        android:layout_marginTop="16dp"
        android:id="@+id/no_connection_text_view_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/no_connection_image_view"
        android:gravity="center"
        android:textColor="#FFF"
        android:fontFamily="sans-serif-condensed"
        android:textSize="20sp"
        android:text="@string/try_again" />

    <Button
        android:id="@+id/retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:drawableLeft="@drawable/ic_retry"
        android:text="@string/text_retry"
        style="?android:attr/buttonBarButtonStyle" />

</RelativeLayout>
