<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/event_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <com.nirhart.parallaxscroll.views.ParallaxListView
        android:id="@+id/event_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="40dp"
        android:divider="@android:color/transparent"
        android:gravity="center_horizontal"
        android:scrollbarThumbVertical="@drawable/scroll_color_teal"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/button_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/teal_primary"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/day_one_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/day_one"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/day_two_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/day_two"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/day_three_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/day_three"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/day_four_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/day_four"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/no_events_today_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/no_events_on_this_day"
        android:textColor="@color/teal_primary"
        android:textSize="25sp"
        android:visibility="gone" />
</RelativeLayout>