<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:padding="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/getting_ready_progress_bar" />

    <ImageView
        android:padding="16dp"
        android:id="@+id/getting_ready_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_done"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:contentDescription="@string/app_name" />

    <TextView
        android:textColor="@color/teal_primary"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/app_setup"
        android:padding="6dp"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_above="@id/getting_ready_progress_bar"
        android:id="@+id/getting_ready_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/getting_ready_button"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"/>

    <TextView
        android:id="@+id/continue_text_view"
        android:visibility="gone"
        android:text="@string/cont"
        android:textColor="@color/teal_primary"
        android:textSize="20sp"
        android:padding="6dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/getting_ready_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        style="?android:attr/buttonBarButtonStyle" />
</RelativeLayout>