<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="@color/teal_primary">

    <android.support.v7.widget.CardView
        android:id="@+id/satyam_card"
        app:cardElevation="5dp"
        android:alpha="0.8"
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:src="@drawable/satyam"
                android:layout_gravity="center"
                android:padding="6dp"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="100dp"
                android:contentDescription="@string/app_name" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:text="@string/satyam"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_weight="0.5"
                    android:layout_height="0dp" />

                <TextView
                    android:text="@string/cul_sec"
                    android:id="@+id/dev_title_text_view"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_weight="0.5"
                    android:layout_height="0dp" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/sanika_card"
        app:cardElevation="5dp"
        android:alpha="0.8"
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:src="@drawable/sanika"
                android:layout_gravity="center"
                android:padding="6dp"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="100dp"
                android:contentDescription="@string/app_name" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:text="@string/sanika"
                    android:id="@+id/dev_subtitle_text_view"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_weight="0.5"
                    android:layout_height="0dp" />

                <TextView
                    android:text="@string/sports_sec"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_weight="0.5"
                    android:layout_height="0dp" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/ravi_card"
        app:cardElevation="5dp"
        android:alpha="0.8"
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:src="@drawable/ravi"
                android:layout_gravity="center"
                android:padding="6dp"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="100dp"
                android:contentDescription="@string/app_name" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:text="@string/ravi"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_weight="0.5"
                    android:layout_height="0dp" />

                <TextView
                    android:text="@string/sports_sec"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_weight="0.5"
                    android:layout_height="0dp" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/aditi_card"
        app:cardElevation="5dp"
        android:alpha="0.8"
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:src="@drawable/aditi"
                android:layout_gravity="center"
                android:padding="6dp"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="100dp"
                android:contentDescription="@string/app_name" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:text="@string/aditi"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_weight="0.5"
                    android:layout_height="0dp" />

                <TextView
                    android:text="@string/cul_sec"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_weight="0.5"
                    android:layout_height="0dp" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:contentDescription="@string/app_name"
            android:id="@+id/fb_image_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_fb" />

        <ImageView
            android:contentDescription="@string/app_name"
            android:id="@+id/tw_image_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_tw" />

        <ImageView
            android:contentDescription="@string/app_name"
            android:id="@+id/insta_image_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_insta" />

        <ImageView
            android:contentDescription="@string/app_name"
            android:id="@+id/gplus_image_view"
            android:src="@drawable/ic_gplus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:contentDescription="@string/app_name"
            android:id="@+id/yt_image_view"
            android:src="@drawable/ic_yt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:contentDescription="@string/app_name"
            android:id="@+id/web_image_view"
            android:src="@drawable/ic_web"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
